# fda-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_with_claude.sh
src/fda_mcp/: __init__.py  config.py  errors.py  server.py
src/fda_mcp/documents/: __init__.py  fetcher.py  urls.py
src/fda_mcp/openfda/: __init__.py  client.py  endpoints.py  summarizer.py
src/fda_mcp/resources/: __init__.py  endpoints_resource.py  field_definitions.py  query_syntax.py
src/fda_mcp/tools/: __init__.py  _helpers.py  count.py  decision_documents.py  fields.py  search.py
tests/: conftest.py  test_document_fetcher.py  test_document_urls.py  test_endpoints.py  test_error_handling.py  test_openfda_client.py  test_resources.py  test_summarizer.py  test_tool_count_records.py  test_tool_decision_documents.py  test_tool_list_fields.py  test_tool_search_adverse_events.py  test_tool_search_device_submissions.py  test_tool_search_device_udi.py  test_tool_search_drug_labels.py  test_tool_search_drug_shortages.py  test_tool_search_drugs.py  test_tool_search_fda.py  test_tool_search_other.py  test_tool_search_recalls.py  test_tool_search_substances.py
tests/integration/: test_live_documents.py  test_live_openfda.py
