[project]
name = "fda-mcp"
version = "0.1.0"
description = "MCP server providing access to FDA data via the OpenFDA API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "fda", "openfda", "healthcare", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "mcp[cli]>=1.26.0",
    "httpx>=0.27.0",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.22.0",
]

[project.scripts]
fda-mcp = "fda_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fda_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: hits real FDA APIs (deselect with -m 'not integration')"]
